# codeforge

./: .gitignore  README.md  pyproject.toml
codeforge/: __init__.py
codeforge/data/: __init__.py  dataset.py  decontaminate.py  dedup.py  mix.py  preprocessing.py  pretokenized.py  quality.py  repo_packing.py
codeforge/eval/: __init__.py  harness.py  humaneval.py  mbpp.py  metrics.py
codeforge/export/: __init__.py  gguf.py  quantize.py
codeforge/inference/: __init__.py  generator.py  speculative.py
codeforge/model/: __init__.py  attention.py  config.py  layers.py  transformer.py
codeforge/tcfp/: __init__.py  kernels.py
codeforge/tcfp/nn/: __init__.py
codeforge/tcfp/training/: __init__.py  checkpointing.py  curriculum.py  monitoring.py  policy.py
codeforge/tokenizer/: __init__.py  alignment.py  config.py  constants.py  special_tokens.py  tokenizer.py  training.py  validation.py  wrapper.py
codeforge/training/: chat_template.py  dpo_trainer.py  optimizer.py  scheduler.py  sft_trainer.py  trainer.py
configs/: model_150m.yaml  model_1b.yaml  model_350m.yaml  model_3b.yaml  pretrain_150m.yaml  pretrain_150m_validation.yaml  pretrain_350m.yaml  sft_150m.yaml  training_default.yaml
data/pretokenized/150m/: metadata.json
examples/: train_tokenizer.py
profiling/: utils.py
scripts/: benchmark_fp8.py  check_fp8.py  evaluate.py  export.py  generate.py  pretokenize.py  train.py  train_dpo.py  train_sft.py  train_tokenizer.py
tcfp-lib/: README.md  pyproject.toml
tcfp-lib/benchmarks/: bench_matmul.py
tcfp-lib/examples/: llama_finetune.py  quickstart.py
tcfp-lib/tcfp/: __init__.py
tcfp-lib/tcfp/nn/: __init__.py
tcfp-lib/tcfp/tcfp12/: __init__.py
tcfp-lib/tcfp/training/: curriculum.py  monitoring.py  policy.py  presets.py
tcfp-lib/tests/: test_import.py
tests/test_tcfp/: test_block_scaling_kernels.py  test_checkpoint_compat.py  test_core.py  test_cuda_ext.py  test_delayed_scaling.py  test_ef_dirty_flag.py  test_fused_act_quant_gemm.py  test_fused_dual_quant.py  test_fused_kernels.py  test_nn.py  test_tcfp12.py  test_tcfp12_enhanced.py  test_tcfp12_tensor_cores.py  test_tensor_cores.py  test_training.py
tests/test_tokenizer/: test_alignment.py  test_constants.py  test_special_tokens.py  test_training.py  test_wrapper.py
